folder card hover on dark mode fixed

--- a/src/ui/styles/folder-view.css
+++ b/src/ui/styles/folder-view.css
@@ -16,7 +16,7 @@
     0 2px 4px rgba(0, 0, 0, 0.01),
     inset 0 1px 0 rgba(255, 255, 255, 0.85),
     inset 0 -1px 2px rgba(0, 0, 0, 0.01);
-    /* box-shadow: var(--explorer-glass-shadow); */
+  /* box-shadow: var(--explorer-glass-shadow); */
   /* box-shadow: var(--input-shadow); */
 
   background-color: var(--explorer-bg-interactive);
@@ -83,8 +83,10 @@
 }
 
 .theme-dark .explorer-folder-card:hover {
-  box-shadow: none;
-  border: 1px solid rgba(255, 255, 255, 0.05)
+  /* box-shadow: none; */
+  box-shadow: var(--explorer-shadow-glass-hover);
+  /* border: 1px solid rgba(255, 255, 255, 0.1) */
+  /* box-shadow: inset  1px 1px 1px rgba(255,255,255,0.1); */
 }
 .explorer-folder-card--missing {
   opacity: 0.7;
